Fix value returned from SELECT of unsigned long system variables. (Bug #10351)